--- a/src/styles/override-bootstrap.scss
+++ b/src/styles/override-bootstrap.scss
@@ -34,6 +34,8 @@ $theme-colors: (
 @import "../node_modules/bootstrap/scss/reboot";
 @import "../node_modules/bootstrap/scss/type";
 @import "../node_modules/bootstrap/scss/buttons";
+@import "../node_modules/bootstrap/scss/_card";
+@import "../node_modules/bootstrap/scss/_forms";
 @import "../node_modules/bootstrap/scss/images";
 @import "../node_modules/bootstrap/scss/containers";
 @import "../node_modules/bootstrap/scss/grid";
