--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,7 +1,3 @@
-
-body,
-#__next {
-  margin: 0px;
-  min-height: 100vh;
-  background-color: #edf2f7;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
